[project]
name = "mcp-serverz"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "llmada>=1.0.3",
 "mcp>=1.11.0",
 "mcp-server>=0.1.4",
 "toml==0.10.2",
]

[tool.setuptools.package-data]
mcp_serverz = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
